# CCFSys2025_TuHaiShiBei

./: README.md  设计方案.docx
code/: pattern_edges.txt
code/OHMINER/: CMakeLists.txt  DYNAMIC_README.md  README.md  build_dynamic.sh  generate_contact_primary_dynamic.sh  generate_pattern.sh  generate_vertex_operations_test.sh  overlap_matching.sh  run_dynamic_tests.sh  test_format.sh  test_script.sh
code/OHMINER/hypergraph/hypergraph_unlable/TC/: node.txt
code/OHMINER/include/: common.h  dataloader.h  hypergraph.h  parallel.h  pattern.h
code/OHMINER/src/: CMakeLists.txt  common.cpp  dataloader.cpp  hypergraph.cpp  pattern.cpp
code/OHMINER/test/: CMakeLists.txt  dynamic_hypergraph_test.cpp  dynamic_operations_test.cpp  dynamic_overlap_match.cpp  interactive_dynamic_system.cpp  overlap_match.cpp  overlap_match_parallel.cpp  random_sample.cpp
code/OHMINER/testdata/: sequential_test.txt  test_operations.txt
code/OHMINER/testdata/vertex_operations/: README.md  clean_random_vertex_operations.txt  clean_vertex_operations_commands.txt  full_vertex_test.txt  random_vertex_operations.txt  run_vertex_tests.sh  simple_vertex_test.txt  stress_test_vertex_operations.txt  validate_vertex_operations.sh  vertex_operations_commands.txt
code/testdata/addedges/: hyperedges-contact-primary-school.txt
code/testdata/deleteedges/: hyperedges-contact-primary-school.txt
code/testdata/modifyedges/: hyperedges-contact-primary-school.txt
code/testdata/修改节点/: node-labels-contact-primary-school.txt
code/testdata/删除节点和超边/: hyperedges-contact-primary-school.txt  node-labels-contact-primary-school.txt
code/testdata/插入节点和超边/: hyperedges-contact-primary-school.txt  node-labels-contact-primary-school.txt
